# dvdmaker

./: .flake8  .gitignore  CLAUDE.md  Makefile  PLAN.md  PRD.md  README.md  TODO.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
docs/: ARCHITECTURE.md  dvd_styler.md  menus.md  spumux.md
src/: __init__.py  exceptions.py  main.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  dvd.py  playlist.py  video.py
src/services/: __init__.py  base.py  cache_manager.py  cleanup.py  converter.py  downloader.py  dvd_author.py  spumux_service.py  tool_manager.py
src/utils/: __init__.py  capacity.py  console.py  file_lock.py  filename.py  logging.py  platform.py  progress.py  time_format.py
tests/: __init__.py  test_concurrent_execution.py  test_exceptions.py  test_main.py
tests/test_config/: test_settings.py
tests/test_models/: test_video.py
tests/test_services/: __init__.py  test_base.py  test_cache_manager.py  test_cleanup.py  test_converter.py  test_downloader.py  test_dvd_author.py  test_spumux_service.py  test_tool_manager.py
tests/test_utils/: test_capacity.py  test_console.py  test_file_lock.py  test_filename.py  test_logging.py  test_platform.py  test_progress.py  test_time_format.py
